# DSA_leetcode

./: .gitignore  4_Median_of_Two_Sorted_Arrays.cpp  CMakeLists.txt  README.md
33_Search_in_Rotated_Sorted_Array/: solution.cpp
4_Median_of_Two_Sorted_Arrays/: bruteforce.cpp
704_Binary_Search/: Solution.cpp  recursive_solution.cpp
74_Search_a_2D_Matrix/: optimization.cpp
Algorithms/Searching/: BinarySearch.cpp
Algorithms/Tree/: Ancestors_of_node.cpp  LevelOrderTraversal.cpp  Lexographical_Tree.cpp  Morris_Inorder_traversal.cpp  serialization_and_deserialization.cpp
Algorithms/kadane/: kadanes_algorithm_for_maximum_sum.cpp
Easy/1290_convert_binary_number_in_a_linked_list_to_integer/: Solution1.cpp  Solution2.cpp  approach.md
Easy/1394_find_lucky_integer_in_an_array/: Solution1.cpp  Solution2.cpp  approach.md
Easy/144_Binary_Tree_Preorder_Traversal/: Solution.cpp
Easy/145_Binary_Tree_Postorder_Traversal/: Solution.cpp
Easy/14_longest_common_prefix/: Solution.cpp  Solution2.cpp  approach.md
Easy/1929_concatenation_of_array/: Solution1.cpp  Solution2.cpp  approach.md
Easy/1_Two_sum/: Solution.cpp  Solution1.cpp  Solution3.cpp  Solution4.cpp  approach.md
Easy/2016_Maximum_Difference_Between_Increasing_Elements/: Solution.cpp
Easy/2099_Find_Subsequence_of_Length_K_With_the_Largest_Sum/: Solution.cpp  Solution2.cpp
Easy/2138_Divide_a_String_Into_Groups_of_Size_k/: Solution.cpp
Easy/217_contains_duplicate/: Solution.cpp  approach.md
Easy/2200_Find_All_K_Distant_Indices_in_an_Array/: Optimized.cpp  Solution.cpp
Easy/242_valid_anagram/: Solution1.cpp  Solution2.cpp  Solution3.cpp  approach.md
Easy/2566_Maximum_Difference_by_Remapping_a_Digit/: Solution.cpp
Easy/27_remove_element/: Solution1.cpp  Solution2.cpp  approach.md
Easy/2942_Find_Words_Containing_Character/: Solution1.cpp  approach.md
Easy/3136_Valid_Word/: Solution1.cpp  approach.md
Easy/3304_find_the_k_th_character_in_string_game_i/: Solution.cpp
Easy/3330_Find_the_Original_Typed_String_I/: Solution.cpp
Easy/3442_Maximum_Difference_Between_Even_and_Odd_Frequency_I/: Solution.cpp
Easy/594_Longest_Harmonious_Subsequence/: Solution.cpp
Easy/704_Binary_Search/: Solution.cpp
Easy/74_Search_a_2D_Matrix/: solution.cpp
Easy/993_Cousins_in_Binary_Tree/: solution.cpp
Hard/135_Candy/: Solution.cpp
Hard/149_Max_Points_on_a _Line/: solution.cpp
Hard/1751_maximum_number_of_events_that_can_be_attended_ii/: Solution1.cpp  Solution2.cpp  Solution3.cpp  approach.md
Hard/2014_Longest_Subsequence_Repeated_k_Times/: Solution.cpp
Hard/2040_Kth_Smallest_Product_of_Two_Sorted_Arrays/: Solution.cpp
Hard/2081_Sum_of_k_Mirror_Numbers/: Optimized.cpp  Solution.cpp
Hard/2163_minimum_difference_in_sums_after_removal_of_elements/: Solution1.cpp
Hard/23_merge_k_sorted_lists/: Solution2.cpp  approach.md
Hard/2402_meeting_rooms_iii/: Solution1.cpp  approach.md
Hard/297_Serialize_and_Deserialize_Binary_Tree/: optimized.cpp  solution.cpp
Hard/3307_find_the_k_th_character_in_string_game_ii/: Solution1.cpp  Solution2.cpp  approach.md
Hard/3333_Find_the_Original_Typed_String_II/: Solution.cpp
Hard/3405_count_the_number_of_arrays_with_k_matching_adjacent_elements/: Solution.cpp
Hard/3423_Maximu_Difference_Between_Adjacent_Elements_in_a_Circular_Array/: Solution.cpp
Hard/3445_Maximum_Difference_Between_Even_and_Odd_Frequency_II/: Solution.cpp
Hard/440_K_th_Smallest_in_Lexicographical_Order/: Optimized.cpp  Solution.cpp
Hard/4_Median_of_Two_Sorted_Arrays/: bruteforce.cpp
Hard/632_smallest_range_covering_elements_from_k_lists/: Solution1.cpp  approach.md
Medium/1020_Number_of_Enclaves/: Solution1.cpp
Medium/102_Binary_Tree_Level_Order_Traversal/: Solution.cpp
Medium/103_Binary_Tree_Zigzag_Level_Order_Traversal/: solution.cpp
Medium/106_Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal/: optimization.cpp  solution.cpp
Medium/107_Binary_Tree_Level_Order_Traversal_II/: Solution.cpp
Medium/1161_Maximum_Level_Sum_of_a_Binary_Tree/: optimized.cpp  solution.cpp
Medium/124_Binary_Tree_Maximum_Path_Sum/: Solution.cpp
Medium/1302_Deepest_Leaves_Sum/: optimized.cpp  solution.cpp
Medium/130_Surrounded_Regions/: Solution1.cpp
Medium/1353_maximum_number_of_events_that_can_be_attended/: Solution1.cpp  approach.md
Medium/1372_Longest_ZigZag_Path_in_a_Binary_Tree/: Solution.cpp
Medium/1448_Count_Good_Nodes_in_Binary_Tree/: solution.cpp
Medium/1498_Number_of_Subsequences_That_Satisfy_the_Given_Sum_Condition/: Solution.cpp
Medium/15_3Sum/: Optimized.cpp  Solution.cpp
Medium/1865_finding_pairs_with_a_certain_sum/: Solution1.cpp
Medium/199_Binary_Tree_Right_Side_View/: optimized.cpp  solution.cpp
Medium/19_Remove_Nth_Node_From_End_of_List/: Solution.cpp
Medium/200_Number_of_Islands/: Solution1.cpp
Medium/2096_Step_By_Step_Directions_From_a_Binary_Tree_Node_to_Another/: Solution.cpp
Medium/215_kth_largest_element_in_an_array/: Solution1.cpp  Solution2.cpp  approach.md
Medium/2294_partition_array_such_that_maximum_difference_is_k/: Solution.cpp
Medium/2311_Longest_Binary_Subsequence_Less_Than_or_Equal_to_K/: Solution.cpp
Medium/236_Lowest_Common_Ancestor_of_a_Binary_Tree/: Solution.cpp
Medium/240_Search_a_2D_Matrix_II/: solution.cpp
Medium/2410_maximum_matching_of_players_with_trainers/: Solution1.cpp
Medium/2434_Using_a_Robot_to_Print_the_Lexicographically_Smallest_String/: Solution.cpp
Medium/2929_Distribute_Candies_Among_Children_II/: Solution.cpp
Medium/2966_divide_array_into_arrays_with_max_difference/: Solution.cpp
Medium/3085_Minimum_Deletions_to_Make_String_K_Special/: Solution.cpp
Medium/3170_Lexicographically_Minimum_String_After_Removing_Stars/: Solution.cpp
Medium/3201_find_the_maximum_length_of_valid_subsequence_i/: Solution1.cpp  Solution2.cpp
Medium/3201_find_the_maximum_length_of_valid_subsequence_ii/: approach.md
Medium/33_Search_in_Rotated_Sorted_Array/: solution.cpp
Medium/3439_reschedule_meetings_for_maximum_free_time_i/: Solution1.cpp  approach.md
Medium/49_group_anagrams/: Solution1.cpp  (+4 more)
STL/: hashSet.cpp
(+31 files in other folders)
